*SVN*

* Added that Base#find takes an optional options hash, including :conditions. Base#find_on_conditions deprecated in favor of #find with :conditions #407 [bitsweat]

* Added a db2 adapter that only depends on the Ruby/DB2 bindings (http://raa.ruby-lang.org/project/ruby-db2/) #386 [Maik Schmidt]

* Added the final touches to the Microsoft SQL Server adapter by DeLynn Berry that makes it suitable for actual use #394 [DeLynn Barry]

* Fixed a bug in the Ruby/MySQL that caused binary content to be escaped badly and come back mangled #405 [Tobias Luetke]

* Added block-style for callbacks #332 [bitsweat].

    Before:
      before_destroy(Proc.new{ |record| Person.destroy_all "firm_id = #{record.id}" })
    
    After:
      before_destroy { |record| Person.destroy_all "firm_id = #{record.id}" }

* Added automated optimistic locking if the field <tt>lock_version</tt> is present.  Each update to the
  record increments the lock_version column and the locking facilities ensure that records instantiated twice
  will let the last one saved raise a StaleObjectError if the first was also updated. Example:
  
    p1 = Person.find(1)
    p2 = Person.find(1)
    
    p1.first_name = "Michael"
    p1.save
    
    p2.first_name = "should fail"
    p2.save # Raises a ActiveRecord::StaleObjectError
  
  You're then responsible for dealing with the conflict by rescuing the exception and either rolling back, merging,
  or otherwise apply the business logic needed to resolve the conflict.

  #384 [Michael Koziarski]

* Added :counter_cache option to acts_as_tree that works just like the one you can define on belongs_to #371 [Josh]

* Fixed quoting in validates_format_of that would allow some rules to pass regardless of input #390 [Dmitry V. Sabanin]

* Fixed broken transactions that were actually only running object-level and not db level transactions [andreas]
